efk/elasticsearch/elk-instance/es-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: es-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.17.0/24
spec:
  tls:
    - hosts:
        - es.cg5labs.net
      secretName: es-tls
  rules:
  - host: "es.cg5labs.net"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: elk-kb-http
              port: 
                number: 5601
